# Flowstate

./: .env.example  .gitignore  .prettierignore  CODEOWNERS  README.md  claude.md  drizzle.config.ts  kash-3.0-PROJECT-SETUP.md  kash-3.0-abyss-build-spec.md  kash-3.0-active-states.html  kash-3.0-ai-persona-build-spec.md  kash-3.0-animation-sweep.md  kash-3.0-backend-optimization-spec.md  kash-3.0-backlog-reframe-build-spec.md  kash-3.0-balance-nudge-build-spec.md  kash-3.0-build-breakdown.md  kash-3.0-care-build-spec.md  kash-3.0-care-library-build-plan.md  kash-3.0-care-library-explainer.html  kash-3.0-care-library-plan-summary.html  kash-3.0-care-q1-activity-task-model.html  kash-3.0-care-q1-where-does-it-show.html  kash-3.0-care-q3-organization.html  kash-3.0-care-q4-seed-catalog.html  kash-3.0-care-q5-catalog-storage.html  kash-3.0-care-q6-fields-cadence.html  kash-3.0-care-scope.html  kash-3.0-context-segmented.html  kash-3.0-context-settingsnav.html  kash-3.0-context-todaymarker.html  kash-3.0-daily-wins-build-spec.md  kash-3.0-data-spine-build-spec.md  kash-3.0-data-spine.md  kash-3.0-design-brief.md  kash-3.0-design-pass.md  kash-3.0-design-prompt-today.md  kash-3.0-design-system-starter.md  kash-3.0-design-tokens.md  kash-3.0-evidence-build-spec.md  kash-3.0-foundations-impl-plan.md  (+65 more)
.github/: pull_request_template.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: dnd.rs  lib.rs  main.rs
docs/: build-status.md  desktop-qa.md  (+7 more)
(+1185 files in other folders)
